--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,20 @@
             }
           },
           "defaultConfiguration": "development"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": [],
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "assets": [],
+            "styles": [
+              "src/global_styles.css"
+            ],
+            "scripts": []
+          }
         }
       },
       "prefix": "app",
