--- a/package.json
+++ b/package.json
@@ -20,22 +20,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.6",
-    "@angular/common": "^20.1.6",
-    "@angular/compiler": "^20.1.6",
-    "@angular/core": "^20.1.6",
-    "@angular/forms": "^20.1.6",
-    "@angular/platform-browser": "^20.1.6",
-    "@angular/platform-browser-dynamic": "^20.1.6",
-    "@angular/router": "^20.1.6",
+    "@angular/animations": "20.1.6",
+    "@angular/common": "20.1.6",
+    "@angular/compiler": "20.1.6",
+    "@angular/core": "20.1.6",
+    "@angular/forms": "20.1.6",
+    "@angular/platform-browser": "20.1.6",
+    "@angular/platform-browser-dynamic": "20.1.6",
+    "@angular/router": "20.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.2",
-    "@angular/cli": "^20.1.2",
-    "@angular/compiler-cli": "^20.1.0",
+    "@angular/build": "20.1.2",
+    "@angular/cli": "20.1.2",
+    "@angular/compiler-cli": "20.1.6",
+    "@angular-devkit/build-angular": "20.1.5",
     "@types/jasmine": "~5.1.0",
     "cypress": "^15.0.0",
     "jasmine-core": "~5.8.0",
